src/objects/Question_Group__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Columns__c</fullName>
        <description>Define the number of columns in section.</description>
        <label>No Of Columns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pagination__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pagination</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Set Question score</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Set Question Group order</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when section will be deleted by admin.</description>
        <inlineHelpText>Checked when section will be deleted by admin.</inlineHelpText>
        <label>is Delete</label>
        <type>Checkbox</type>
    </fields>
    <label>Question Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>